feat: add admin CRUD view for title reigns
Adds TitleReignListView (ADMIN only) to inspect, edit, and delete
TitleReign rows directly — needed to clean up bogus/corrupted reigns
(e.g. negative durations) left over from historical data-repair bugs
that the automated repair service can't safely resolve on its own.

Backs the view with new getAllReigns/saveReign/deleteReign methods on
TitleService.